deploy/bng-home.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bng-home
  namespace: christopherjmiller
  labels:
    app: bng-home
    service: web
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: bng-home
  template:
    metadata:
      namespace: christopherjmiller
      labels:
        app: bng-home
        service: web
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
      containers:
        - name: home
          image: quay.io/christopherjmiller/bng-home:1.4.0
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          lifecycle:
            preStop:
              exec:
                command: ["/usr/sbin/nginx","-s","quit"]
---
apiVersion: v1
kind: Service
metadata:
  name: bng-home
  namespace: christopherjmiller
  labels:
    service: web
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: bng-home
