deploy/bng-home-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bng-home
  namespace: christopherjmiller
  labels:
    service: web
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - brokenneckgang.com
        - www.brokenneckgang.com
      secretName: bng-home-tls
  rules:
    - host: brokenneckgang.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bng-home
                port:
                  number: 80
    - host: www.brokenneckgang.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bng-home
                port:
                  number: 80
